[project]
name = "al-admin"
dynamic = ["version"]
description = "Admin for Alfred"
authors = [{ name = "Quaternion Media", email = "al-admin@quaternion.media" }]
dependencies = [
    "al-otto~=0.2",
    "fastapi~=0.95",
    "starlette-admin~=0.8",
    "sqlmodel~=0.0",
    "pydantic[email]~=1.10",
]
requires-python = ">=3.8.1,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/quaternionmedia/al-admin"
documentation = "https://quaternionmedia.github.io/al-admin/"
repository = "https://github.com/quaternionmedia/al-admin"

[project.optional-dependencies]
production = ["psycopg2~=2.9", "uvicorn[standard]~=0.21", "gunicorn~=20.1"]
test = [
    "pytest~=7.3",
    "pytest-cov~=4.0",
    "pytest-sugar~=0.9",
    "pytest-xdist~=3.2",
    "httpx~=0.24",
]

[tool.pdm.dev-dependencies]
dev = [
    "uvicorn~=0.22",
    "black~=23.3",
    "ruff~=0.0",
]
docs = [
    "mkdocs~=1.4",
    "mkdocs-material~=9.1",
    "mkdocs-git-revision-date-localized-plugin~=1.2",
    "mike @ git+https://github.com/jimporter/mike.git@063c93e9cce7c82939c7d47e6d33f99b24bba372",
    "mkdocstrings[python]~=0.21",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "file", path = "admin/_version.py" }

[tool.pytest.ini_options]
testpaths = ["tests"]
