[project]
name = "al-admin"
dynamic = ["version"]
description = "Admin for Alfred"
authors = [{ name = "Quaternion Media", email = "al-admin@quaternion.media" }]
dependencies = [
    "al-otto~=0.2",
    "fastapi~=0.115",
    "starlette-admin~=0.14",
    "sqlmodel~=0.0",
    "pydantic[email]~=1.10",
    "authlib~=1.3",
    "httpx~=0.27",
    "itsdangerous~=2.2",
]
requires-python = ">=3.8.1,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/quaternionmedia/al-admin"
documentation = "https://quaternionmedia.github.io/al-admin/"
repository = "https://github.com/quaternionmedia/al-admin"

[project.optional-dependencies]
production = ["psycopg2~=2.9", "uvicorn[standard]~=0.21", "gunicorn~=20.1"]
test = [
    "pytest~=8.3",
    "pytest-cov~=5.0",
    "pytest-sugar~=1.0",
    "pytest-xdist~=3.6",
    "httpx~=0.27",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pdm]
version = { source = "file", path = "admin/_version.py" }
[tool.pdm.dev-dependencies]
dev = [
    "uvicorn~=0.32",
    "black~=24.8",
    "ruff~=0.6",
]
docs = [
    "mkdocs~=1.6",
    "mkdocs-material~=9.5",
    "mkdocs-git-revision-date-localized-plugin~=1.2",
    "mike @ git+https://github.com/jimporter/mike.git@063c93e9cce7c82939c7d47e6d33f99b24bba372",
    "mkdocstrings[python]~=0.26",
]

